--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,21 +6,22 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-regex = "1"
-termsize = "0.1"
-reqwest = "0.11.11"
-tokio = {version = "*", features = ["full"]}
-serde = "1.0.144"
-serde_json = "1.0.85"
-serde_derive = "1.0.144"
+anyhow = "1.0"
+async-await = "0.2.1"
+chrono = "0.4.22"
 colored = "2.0.0"
 elasticsearch = "7.14.0-alpha.1"
-chrono = "0.4.22"
-logwatcher = "0.1.1"
-async-await = "0.2.1"
-sha1 = "0.10.5"
-futures = { version = "0.3", features = ["compat"] }
 flate2 = "1.0.24"
+futures = { version = "0.3", features = ["compat"] }
+logwatcher = "0.1.1"
+regex = "1"
+reqwest = "0.11.11"
+serde = "1.0.144"
+serde_derive = "1.0.144"
+serde_json = "1.0.85"
+sha1 = "0.10.5"
+termsize = "0.1"
+tokio = {version = "*", features = ["full"]}
 
 [profile.release]
 strip = true
