--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "rust-logger"
-version = "0.1.0"
+name = "nginx-es"
+version = "1.0.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -10,12 +10,12 @@ anyhow = "1.0"
 async-await = "0.2.1"
 chrono = "0.4.22"
 colored = "2.0.0"
-elasticsearch = "7.14.0-alpha.1"
+elasticsearch = "8.15.0-alpha.1"
 flate2 = "1.0.24"
 futures = { version = "0.3", features = ["compat"] }
 logwatcher = "0.1.1"
 regex = "1"
-reqwest = "0.11.11"
+reqwest = { version = "0.12", features = ["json"]}
 serde = "1.0.144"
 serde_derive = "1.0.144"
 serde_json = "1.0.85"
